@@ -9,7 +9,7 @@ import (
 	"strings"
 
 	"github.com/consol-monitoring/snclient/pkg/utils"
-	"github.com/shirou/gopsutil/v3/disk"
+	"github.com/shirou/gopsutil/v4/disk"
 )
 
 func (l *CheckDrivesize) getDefaultFilter() string {
