@@ -7,7 +7,7 @@ import (
 	"strings"
 
 	"github.com/consol-monitoring/snclient/pkg/utils"
-	"github.com/shirou/gopsutil/v3/disk"
+	"github.com/shirou/gopsutil/v4/disk"
 	"golang.org/x/exp/slices"
 )
 
