@@ -9,7 +9,7 @@ import (
 	"time"
 
 	"github.com/consol-monitoring/snclient/pkg/convert"
-	"github.com/shirou/gopsutil/v3/process"
+	"github.com/shirou/gopsutil/v4/process"
 	"golang.org/x/exp/slices"
 )
 
